@@ -26,6 +26,9 @@ echo "* Resetting $PLAN9/config"
 rm -f config
 
 (
+echo "* Compiler version:"
+9c -v 2>&1 | grep -i version | sed 's/^/	/'
+
 if [ `uname` = Linux ]; then
 	# On Linux, we use the kernel version to decide whether
 	# to use pthreads or not.  On 2.6 versions that aren't
