@@ -34,7 +34,11 @@ Edit ./^$/,s/<Table/<table border=0 cellspacing=0 cellpadding=0 width=100%/g
       |
       <a href="man/man1/cvs.html">cvs</a>
       |
-      <a href="http://cvs.pdos.lcs.mit.edu/cvs/plan9">cvsweb</a>
+      <a href="http://cvs.pdos.csail.mit.edu/cvs/plan9">cvsweb</a>
+      |
+      <a href="man/man1/hg.html">hg</a>
+      |
+      <a href="http://hg.pdos.csail.mit.edu/hg/plan9">hgweb</a>
       |
       <a href="unix/">unix</a>
     </center>
@@ -75,7 +79,7 @@ Edit ./^$/,s/<Table/<table border=0 cellspacing=0 cellpadding=0 width=100%/g
       <tr><td><td>
         latest tree: <a href="plan9port.tgz">plan9port.tgz</a>
         <font size=-1>(<a href="/cgi-bin/info.cgi?file=/plan9port/plan9port.tgz">date and checksums</a>;
-          <a href="/usr/local/plan9/CHANGES">list of recent changes</a>;
+          <a href="http://hg.pdos.csail.mit.edu/hg/plan9/shortlog">list of recent changes</a>;
           <a href="/usr/local/plan9/LICENSE">license</a>)</font>
         <br>
     </table>
