@@ -141,7 +141,7 @@ post(char *srv)
 		fatal("can't create pipe: %r");
 
 	/* 0 will be server end, 1 will be client end */
-	if(post9pservice(p[1], "plumb") < 0)
+	if(post9pservice(p[1], "plumb", nil) < 0)
 		fatal("post9pservice plumb: %r");
 	close(p[1]);
 
