@@ -2,6 +2,11 @@
 # submitted the patch but more often just reported
 # the problem.
 
+# For entries more recent than January 30, 2008,
+# see the Mercurial repository history at 
+# http://hg.pdos.csail.mit.edu/hg/plan9/shortlog
+# (or if you have checked out the Mercurial tree, run hg view).
+
 January 30, 2008
 	acme: fix regexp match choice bug
 	devdraw: add F11 for full-screen toggle
